fix modelling and quiz exercise logic